experimenting with styles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </ul>
     </nav>
     <h1>Orquesta GarDel</h1>
+    <img src="https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/235932510_678393239774600_275357119712451429_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=e3f864&_nc_ohc=Dq52Osif-KgAX9aIXr1&_nc_ht=scontent-iad3-2.xx&oh=00_AT9OBTBTvz0AtqW-KhQ2kimKQ7sR8a29CPGW9u6zBQqBfw&oe=635CF405"
+        alt="orquesta gardel photo">
     <section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, exercitationem rerum voluptate fuga cumque
             vitae repellendus quis sint, recusandae eos aspernatur numquam corporis deserunt reprehenderit natus,
@@ -174,7 +176,7 @@
             Eos sunt nostrum commodi alias optio quod, est ad ut cumque voluptatum? Cum deleniti voluptatibus amet eos,
             ipsum nihil dolorum nisi quia quis magni fugit harum. Exercitationem minima laboriosam aperiam?</p>
     </section>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
