--- a/music.html
+++ b/music.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>This is the music page!</h1>
+    <img src="https://f4.bcbits.com/img/a4290568509_10.jpg" alt="Lo Que Tu Querias Album Cover">
+    <img src="https://f4.bcbits.com/img/a1246577522_10.jpg" alt="Siempre Estoy Contigo Album Cover">
 </body>
 
 </html>
