--- a/index.html
+++ b/index.html
@@ -28,54 +28,52 @@
         </ul>
     </nav>
     <section class="introContent">
-
+        <!-- Good idea: let the background images position:fixed once they reach the top of the window -->
+        <style id="bkgdImg1">
+            .introContent {
+                background-image: url("https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/312822367_10228797397020760_3754353643014589453_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3b7ae0&_nc_ohc=HEnbfkKH1BMAX93jNVV&_nc_ht=scontent-iad3-2.xx&oh=00_AT_DDmi7eVr-8AhcnxxEmVGwaHG0IJsMvZ2OcWYO5PZHig&oe=635CBAD7");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            }
+        </style>
         <h1>Orquesta GarDel</h1>
-        <div class="bandImg">
-            <!-- <img id="fullBandPhoto"
-                src="https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/235932510_678393239774600_275357119712451429_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=e3f864&_nc_ohc=Dq52Osif-KgAX9aIXr1&_nc_ht=scontent-iad3-2.xx&oh=00_AT9OBTBTvz0AtqW-KhQ2kimKQ7sR8a29CPGW9u6zBQqBfw&oe=635CF405"
-                alt="orquesta gardel photo"> -->
+        <!-- rotate through quotes? -->
+        <div id="quotes">
+            <p>"You can feel the music on your skin!"</p>
+            <p>"This is salsa the way God made it."</p>
+            <p>"Onstage, Orquesta GarDel makes salsa dura: a locomotive of energy on steel rails with endless momentum
+                and
+                irresistible motion."</p>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, exercitationem rerum voluptate fuga cumque
-            vitae repellendus quis sint, recusandae eos aspernatur numquam corporis deserunt reprehenderit natus,
-            quaerat animi laudantium ex?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad incidunt tempore
-            fugiat illum. Possimus veniam facilis aliquam accusamus blanditiis ad voluptatem quas sit, enim aliquid?
-            Iusto aliquam vel qui optio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam
-            earum quod cum commodi? Quis, cupiditate? Dolores deleniti minus harum explicabo asperiores maxime ipsum
-            nihil temporibus, unde laborum ullam quam.
-            Minus sint iure fugiat nam nemo culpa vero repudiandae libero mollitia iste dolorum quaerat aliquid
-            quibusdam amet nisi voluptate corporis, nostrum quia consequuntur laudantium dignissimos labore sapiente
-            repellendus? Nisi, architecto!
-            Fuga, a quas! Rerum, illum distinctio iure voluptatem voluptatum mollitia cupiditate architecto libero,
-            aliquam quibusdam nobis quam ipsam, laboriosam voluptate quae. Porro impedit debitis, error dignissimos
-            praesentium fuga placeat eligendi!
-            Assumenda veritatis exercitationem explicabo aut rerum perferendis voluptas! Harum dolores laborum
-            distinctio architecto amet? Ipsam, tenetur consequuntur laboriosam aperiam officia aliquam fuga. Nam
-            voluptatem officiis ex. Nihil tempora expedita nisi!
-        </p>
     </section>
     <section class="aboutBand">
         <h2>About</h2>
         <div id="about">
             <img src="https://i.scdn.co/image/ab6761610000e5eb0337dd472449b2418d059552"
                 alt="Orquesta GarDel at Old Havana restaurant">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere neque laborum hic at provident, tempora
-                totam quasi aliquid quisquam odit tenetur excepturi, quod fugit sint! At omnis ipsam veniam nam.
-                Minus nobis perspiciatis magni voluptatibus porro saepe nihil provident dolorum alias, obcaecati eos
-                ipsa quidem facilis repellat? Eaque, minus, sunt rem, eos quis iste excepturi sint architecto deleniti
-                quidem ipsa.
-                A quibusdam dolore quam dolorem quo pariatur, sunt cupiditate similique quos cumque nulla quae tempora
-                laboriosam nihil ullam non, neque, accusantium laudantium nesciunt voluptas! Iure animi voluptates quod
-                vero. Placeat?
-                Cumque sint eaque ut ducimus assumenda deserunt molestias, impedit reprehenderit. Exercitationem soluta
-                quo nobis, aspernatur beatae voluptatum nihil assumenda iste natus commodi aliquid? Sapiente quasi
-                perspiciatis vero, alias exercitationem voluptatum.
-                Ad modi iusto nulla, deserunt ut perspiciatis rem quos labore ipsa deleniti, facere nihil error possimus
-                repellendus culpa? Officia cupiditate impedit velit, soluta tenetur atque optio commodi maxime
-                aspernatur aliquam.</p>
+            <p>Thoroughly multinational but uniquely North Carolinian, Orquesta GarDel thrills audiences with a
+                high-energy Latin dance music experience. The monstrous thirteen-member lineup replicates the format of
+                a classic Nuyorican salsa dura ensemble – a full deck of horn players, percussionists, and coro singers.
+                Rooted in its own arrangements of songs from the great salsa, cumbia, and merengue artists, this is
+                ultimately not a cover band. <br>
+                In 2011 Orquesta GarDel released its debut EP, Lo Que Tú Querías, which consists entirely of original
+                compositions. As GarDel continues to write, flavors of edgy jazz and funky
+                Cuban timba continue to pour from the stage onto the dance floor. The band tours the southeast, having
+                headlined from Roanoke, VA to Charleston, SC, including appearances at the Lake Eden Arts Festival,
+                Shakori Hills GrassRoots Festival, North Carolina State University, North Carolina Art Museum, La Fiesta
+                del Pueblo, and Raleigh-Durham hometown venues like Cat’s Cradle and Motorco Music Hall.
+                Founded in 2006 by David Garcia, a professor of ethnomusicology at UNC Chapel Hill, and singer Nelson
+                Delgado, Orquesta GarDel’s members straddle multiple generations, combining Latino music veterans with
+                African- and Anglo-American jazzers. The group is currently directed by pianist Eric Hirsh,
+                percussionist Brevan Hampden, and
+                trombonist Andy Kleindienst.
+            </p>
         </div>
     </section>
     <section class="music">
         <h2>Music</h2>
+        <!-- make a music playlist player! -->
         <div id="music">
             <img src="https://f4.bcbits.com/img/a4290568509_10.jpg" alt="Lo Que Tu Querias Album Cover">
             <img src="https://f4.bcbits.com/img/a1246577522_10.jpg" alt="Siempre Estoy Contigo Album Cover">
@@ -96,6 +94,23 @@
             exercitationem atque ex obcaecati sed eos earum, molestias fuga eveniet! Ullam laboriosam, minima
             inventore
             voluptatibus voluptatem aut.</p>
+    </section>
+    <section name="contact">
+        <div class="contactForm">
+            <form action="#">
+                <label for="firstName">First Name</label>
+                <input type="text" id="firstName">
+                <label for="lastName">Last Name</label>
+                <input type="text" id="lastName">
+                <label for="email">Email</label>
+                <input type="text" id="email">
+                <label for="subject">Subject</label>
+                <input type="text" id="subject">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <button>Submit</button>
+            </form>
+        </div>
     </section>
     <script src="app.js"></script>
 </body>
