more style changes, no new JS

--- a/index.html
+++ b/index.html
@@ -28,17 +28,8 @@
         </ul>
     </nav>
     <section class="introContent">
-        <!-- Good idea: let the background images position:fixed once they reach the top of the window -->
-        <style id="bkgdImg1">
-            .introContent {
-                background-image: url("https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/312822367_10228797397020760_3754353643014589453_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3b7ae0&_nc_ohc=HEnbfkKH1BMAX93jNVV&_nc_ht=scontent-iad3-2.xx&oh=00_AT_DDmi7eVr-8AhcnxxEmVGwaHG0IJsMvZ2OcWYO5PZHig&oe=635CBAD7");
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-size: cover;
-            }
-        </style>
         <h1>Orquesta GarDel</h1>
-        <!-- rotate through quotes? -->
+        <!-- rotate through quotes? automatically or with little arrows you can click on? -->
         <div id="quotes">
             <p>"You can feel the music on your skin!"</p>
             <p>"This is salsa the way God made it."</p>
@@ -49,64 +40,79 @@
     </section>
     <section class="aboutBand">
         <h2>About</h2>
-        <div id="about">
-            <img src="https://i.scdn.co/image/ab6761610000e5eb0337dd472449b2418d059552"
+        <div id="about"><img src="https://i.scdn.co/image/ab6761610000e5eb0337dd472449b2418d059552"
                 alt="Orquesta GarDel at Old Havana restaurant">
-            <p>Thoroughly multinational but uniquely North Carolinian, Orquesta GarDel thrills audiences with a
-                high-energy Latin dance music experience. The monstrous thirteen-member lineup replicates the format of
-                a classic Nuyorican salsa dura ensemble – a full deck of horn players, percussionists, and coro singers.
-                Rooted in its own arrangements of songs from the great salsa, cumbia, and merengue artists, this is
-                ultimately not a cover band. <br>
-                In 2011 Orquesta GarDel released its debut EP, Lo Que Tú Querías, which consists entirely of original
-                compositions. As GarDel continues to write, flavors of edgy jazz and funky
-                Cuban timba continue to pour from the stage onto the dance floor. The band tours the southeast, having
-                headlined from Roanoke, VA to Charleston, SC, including appearances at the Lake Eden Arts Festival,
-                Shakori Hills GrassRoots Festival, North Carolina State University, North Carolina Art Museum, La Fiesta
-                del Pueblo, and Raleigh-Durham hometown venues like Cat’s Cradle and Motorco Music Hall.
-                Founded in 2006 by David Garcia, a professor of ethnomusicology at UNC Chapel Hill, and singer Nelson
-                Delgado, Orquesta GarDel’s members straddle multiple generations, combining Latino music veterans with
-                African- and Anglo-American jazzers. The group is currently directed by pianist Eric Hirsh,
-                percussionist Brevan Hampden, and
-                trombonist Andy Kleindienst.
-            </p>
+            <p>Thoroughly multinational but uniquely North Carolinian,
+                Orquesta GarDel thrills audiences with a high-energy Latin dance music experience. The monstrous
+                thirteen-member lineup replicates the format of a classic Nuyorican salsa dura ensemble – a full deck of
+                horn players,
+                percussionists,
+                and coro singers. Rooted in its own arrangements of songs from the great salsa,
+                cumbia,
+                and merengue artists,
+                this is ultimately not a cover band. <br>In 2011 Orquesta GarDel released its debut EP,
+                Lo Que Tú Querías,
+                which consists entirely of original compositions. As GarDel continues to write,
+                flavors of edgy jazz and funky Cuban timba continue to pour from the stage onto the dance floor. The
+                band tours the southeast,
+                having headlined from Roanoke,
+                VA to Charleston,
+                SC,
+                including appearances at the Lake Eden Arts Festival,
+                Shakori Hills GrassRoots Festival,
+                North Carolina State University,
+                North Carolina Art Museum,
+                La Fiesta del Pueblo,
+                and Raleigh-Durham hometown venues like Cat’s Cradle and Motorco Music Hall. Founded in 2006 by David
+                Garcia,
+                a professor of ethnomusicology at UNC Chapel Hill,
+                and singer Nelson Delgado,
+                Orquesta GarDel’s members straddle multiple generations,
+                combining Latino music veterans with African- and Anglo-American jazzers. The group is currently
+                directed by pianist Eric Hirsh,
+                percussionist Brevan Hampden,
+                and trombonist Andy Kleindienst. </p>
         </div>
     </section>
     <section class="music">
         <h2>Music</h2>
-        <!-- make a music playlist player! -->
-        <div id="music">
-            <img src="https://f4.bcbits.com/img/a4290568509_10.jpg" alt="Lo Que Tu Querias Album Cover">
-            <img src="https://f4.bcbits.com/img/a1246577522_10.jpg" alt="Siempre Estoy Contigo Album Cover">
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut maxime libero, ab iure porro.
-            Temporibus
-            nesciunt vitae ipsa natus perferendis quia, ad in laboriosam, quasi modi odio, dolorum iste.
-            Esse in, dolores aut ab perspiciatis possimus quaerat repellendus perferendis maiores magni non ad est
-            qui
-            voluptatum sapiente repellat eveniet! Nostrum facere laborum, quo voluptatum cupiditate deserunt labore
-            veniam quae?
-            Dolorum incidunt animi, deserunt aut libero doloremque exercitationem eligendi temporibus unde. Delectus
-            corporis, hic praesentium cumque quam totam necessitatibus inventore, ipsum sapiente repellendus, quos
-            veniam impedit cupiditate enim architecto assumenda!
-            Aspernatur est tempora doloremque harum vitae quidem, eveniet ab rerum enim, omnis, qui quas deserunt
-            dolores in animi maiores. Quae neque aliquam alias nam debitis voluptatibus qui in praesentium ea!
-            Eaque quidem ab consequuntur aut, dignissimos enim, aliquid accusantium nemo explicabo nihil esse
-            exercitationem atque ex obcaecati sed eos earum, molestias fuga eveniet! Ullam laboriosam, minima
-            inventore
-            voluptatibus voluptatem aut.</p>
+        < !-- make a music playlist player ! -->
+            <div id="music"><img src="https://f4.bcbits.com/img/a4290568509_10.jpg"
+                    alt="Lo Que Tu Querias Album Cover"><img src="https://f4.bcbits.com/img/a1246577522_10.jpg"
+                    alt="Siempre Estoy Contigo Album Cover"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut maxime libero,
+                ab iure porro. Temporibus nesciunt vitae ipsa natus perferendis quia,
+                ad in laboriosam,
+                quasi modi odio,
+                dolorum iste. Esse in,
+                dolores aut ab perspiciatis possimus quaerat repellendus perferendis maiores magni non ad est qui
+                voluptatum sapiente repellat eveniet ! Nostrum facere laborum,
+                quo voluptatum cupiditate deserunt labore veniam quae? Dolorum incidunt animi,
+                deserunt aut libero doloremque exercitationem eligendi temporibus unde. Delectus corporis,
+                hic praesentium cumque quam totam necessitatibus inventore,
+                ipsum sapiente repellendus,
+                quos veniam impedit cupiditate enim architecto assumenda ! Aspernatur est tempora doloremque harum vitae
+                quidem,
+                eveniet ab rerum enim,
+                omnis,
+                qui quas deserunt dolores in animi maiores. Quae neque aliquam alias nam debitis voluptatibus qui in
+                praesentium ea ! Eaque quidem ab consequuntur aut,
+                dignissimos enim,
+                aliquid accusantium nemo explicabo nihil esse exercitationem atque ex obcaecati sed eos earum,
+                molestias fuga eveniet ! Ullam laboriosam,
+                minima inventore voluptatibus voluptatem aut.</p>
     </section>
-    <section name="contact">
+    <section class="contact">
         <div class="contactForm">
+            <h2>Contact</h2>
             <form action="#">
                 <label for="firstName">First Name</label>
                 <input type="text" id="firstName">
                 <label for="lastName">Last Name</label>
                 <input type="text" id="lastName">
                 <label for="email">Email</label>
-                <input type="text" id="email">
-                <label for="subject">Subject</label>
-                <input type="text" id="subject">
-                <label for="message">Message</label>
+                <input type="text" id="email"><label for="subject">Subject</label>
+                <input type="text" id="subject"><label for="message">Message</label>
                 <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 <button>Submit</button>
             </form>
