--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         </div>
     </section>
     <section class="aboutBand">
-        <h2>About</h2>
-        <div id="about"><img src="https://i.scdn.co/image/ab6761610000e5eb0337dd472449b2418d059552"
-                alt="Orquesta GarDel at Old Havana restaurant">
+        <div>
+            <h2>About</h2>
+            <!-- <img src="https://i.scdn.co/image/ab6761610000e5eb0337dd472449b2418d059552"
+                alt="Orquesta GarDel at Old Havana restaurant"> -->
             <p>Thoroughly multinational but uniquely North Carolinian,
                 Orquesta GarDel thrills audiences with a high-energy Latin dance music experience. The monstrous
                 thirteen-member lineup replicates the format of a classic Nuyorican salsa dura ensemble – a full deck of
@@ -76,36 +77,37 @@
     </section>
     <section class="music">
         <h2>Music</h2>
-        < !-- make a music playlist player ! -->
-            <div id="music"><img src="https://f4.bcbits.com/img/a4290568509_10.jpg"
-                    alt="Lo Que Tu Querias Album Cover"><img src="https://f4.bcbits.com/img/a1246577522_10.jpg"
-                    alt="Siempre Estoy Contigo Album Cover"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut maxime libero,
-                ab iure porro. Temporibus nesciunt vitae ipsa natus perferendis quia,
-                ad in laboriosam,
-                quasi modi odio,
-                dolorum iste. Esse in,
-                dolores aut ab perspiciatis possimus quaerat repellendus perferendis maiores magni non ad est qui
-                voluptatum sapiente repellat eveniet ! Nostrum facere laborum,
-                quo voluptatum cupiditate deserunt labore veniam quae? Dolorum incidunt animi,
-                deserunt aut libero doloremque exercitationem eligendi temporibus unde. Delectus corporis,
-                hic praesentium cumque quam totam necessitatibus inventore,
-                ipsum sapiente repellendus,
-                quos veniam impedit cupiditate enim architecto assumenda ! Aspernatur est tempora doloremque harum vitae
-                quidem,
-                eveniet ab rerum enim,
-                omnis,
-                qui quas deserunt dolores in animi maiores. Quae neque aliquam alias nam debitis voluptatibus qui in
-                praesentium ea ! Eaque quidem ab consequuntur aut,
-                dignissimos enim,
-                aliquid accusantium nemo explicabo nihil esse exercitationem atque ex obcaecati sed eos earum,
-                molestias fuga eveniet ! Ullam laboriosam,
-                minima inventore voluptatibus voluptatem aut.</p>
+        !-- make a music playlist player ! -->
+        <div id="music">
+            <img src="https://f4.bcbits.com/img/a4290568509_10.jpg" alt="Lo Que Tu Querias Album Cover">
+            <img src="https://f4.bcbits.com/img/a1246577522_10.jpg" alt="Siempre Estoy Contigo Album Cover">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ut maxime libero,
+            ab iure porro. Temporibus nesciunt vitae ipsa natus perferendis quia,
+            ad in laboriosam,
+            quasi modi odio,
+            dolorum iste. Esse in,
+            dolores aut ab perspiciatis possimus quaerat repellendus perferendis maiores magni non ad est qui
+            voluptatum sapiente repellat eveniet ! Nostrum facere laborum,
+            quo voluptatum cupiditate deserunt labore veniam quae? Dolorum incidunt animi,
+            deserunt aut libero doloremque exercitationem eligendi temporibus unde. Delectus corporis,
+            hic praesentium cumque quam totam necessitatibus inventore,
+            ipsum sapiente repellendus,
+            quos veniam impedit cupiditate enim architecto assumenda ! Aspernatur est tempora doloremque harum vitae
+            quidem,
+            eveniet ab rerum enim,
+            omnis,
+            qui quas deserunt dolores in animi maiores. Quae neque aliquam alias nam debitis voluptatibus qui in
+            praesentium ea ! Eaque quidem ab consequuntur aut,
+            dignissimos enim,
+            aliquid accusantium nemo explicabo nihil esse exercitationem atque ex obcaecati sed eos earum,
+            molestias fuga eveniet ! Ullam laboriosam,
+            minima inventore voluptatibus voluptatem aut.</p>
     </section>
     <section class="contact">
-        <div class="contactForm">
+        <div>
             <h2>Contact</h2>
-            <form action="#">
+            <form class="contactForm" action="#">
                 <label for="firstName">First Name</label>
                 <input type="text" id="firstName">
                 <label for="lastName">Last Name</label>
