changed file structure of css and js files, changed background pictures, changed text color and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="assets/app.css">
     <title>Orquesta GarDel</title>
 
 </head>
@@ -26,6 +26,8 @@
         </ul>
     </nav>
     <section class="introContent">
+        <!-- <img src="https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/236309041_678393236441267_7992929386329314258_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=0OIUCi-DJJIAX85jLxS&_nc_ht=scontent-iad3-2.xx&oh=00_AfAusQHHt66LUkkVTzEvZHjswDeZPhPqJx8-IwLD3REWKg&oe=6389E47D"
+            alt=""> -->
         <h1>Orquesta GarDel</h1>
         <!-- rotate through quotes? automatically or with little arrows you can click on? -->
         <div id="quotes">
@@ -120,7 +122,7 @@
             </form>
         </div>
     </section>
-    <script src="app.js"></script>
+    <script src="assets/app.js"></script>
 </body>
 
 </html>
